# pynb2typst

./: README.md  pyproject.toml
src/pynb2typst/: __init__.py
tests/: simple.py  simple.tpy  simple.typ
