[project]
name = "pynb2typst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "delanoleslieprof@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pynb2typst = "pynb2typst:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
